--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.71.1",
     "react-router": "^7.13.0",
     "zustand": "^5.0.11"
   },
